Fixed a flexbox spacing issue
Had to fix the main box that houses the project images, and make the
sizing not clip with the bottom of the page and be more dynamic. Think
it'll work.

--- a/itis3135/styles/dark.css
+++ b/itis3135/styles/dark.css
@@ -77,9 +77,10 @@ main{
     justify-content: center;
 }
 .project-main{
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 30px;
 }
 .about-box{
     background-color: #161b22;
@@ -102,7 +103,7 @@ main{
     width: 500px;
 }
 .project-image-box{
-    height: 75vh;
+    height: fit-content(20em);
     width: 75%;
     background-color: #161b22;
     border: 1px solid #30363d;
@@ -121,8 +122,8 @@ main{
     border-radius: 10px;
     box-shadow: inset 0 -1px 0 #21262d;
     box-shadow: 2px 2px 5px #010409;
-    width: 49%;
-    height: 49%;
+    width: 48%;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
